# CARON_DURAN_projet_RTI

./: CMakeLists.txt  README.md
BD_Books/: CreationBD.cpp
include/: protocole.h
src/: SMOP.cpp  Serveur.cpp  Socket_lib.cpp  mainwindowclientbookencoder.cpp
